<resources>
    <string name="app_name">Practica1_1</string>
    <string name="seleccion">Seleccione una figura</string>
    <string name="cuadrado">Cuadro</string>
    <string name="circulo">Círculo</string>
    <string name="triangulo">Triángulo</string>
    <string name="cubo">Cubo</string>
    <string name="radio">Radio</string>
    <string name="lado1">Lado 1 ó Base</string>
    <string name="lado2">Lado 2 ó Altura</string>
    <string name="lado3">Lado 3</string>
    <string name="calcular">Calcular medidas</string>
    <string name="femenino">Femenino</string>
    <string name="resultado">Resultado</string>
    <string name="titulo">Cálculo con Figuras Geométricas</string>
    <string name="seleccionar">Seleccionar Figura</string>
    <string name="cuadro">Cuadro</string>
</resources>
